client/styles.css
* {
  margin: 0;
  padding: 0;
  box-sizing: border-box;
  font-family: Arial, Helvetica, sans-serif;
  scroll-behavior: smooth;
}

header {
  position: fixed;
  padding: 50px;
  background-image: linear-gradient(to right, #02c39a, #00b4d8);
  width: 100%;
  height: 150px;
  z-index: 2;
  display: flex;
  align-items: center;
  justify-content: center;
  font-size: 1.5em;
  color: white;
}

.nav-container {
  height: 250px;
  width: 200px;
  padding: 15px;
  font-weight: bold;
  position: fixed;
  z-index: 1;
  top: 200px;
  left: 50px;
  background-color: white;
  overflow-x: hidden;
  display: flex;
  flex-direction: column;
  justify-content: space-around;
  border: 10px solid;
  border-image: linear-gradient(#02c39a, #00b4d8) 1;
}

section {
  position: absolute;
  margin-right: 250px;
  left: 250px;
  top: 150px;
  padding: 50px;
  display: flex;
  flex-direction: column;
}

section > div {
  margin: 25px 0;
}

#about-text {
  margin: 25px 0;
}

.song-card {
  margin: 25px;
  display: flex;
}

#text-card {
  display: flex;
  flex-direction: column;
  gap: 25px;
  margin-left: 50px;
  margin-top: 32px;
  width: 320px;
}

.song-containers {
  display: flex;
}

.rec-card {
  display: flex;
  justify-content: space-between;
  border: 2px solid red;
  width: 80%;
}

.rec-card-info {
  display: flex;
  flex-direction: column;
  justify-content: flex-start;
  gap: 10px;
  margin: 25px;
}

#song-rec-sect {
  width: 200px;
  border: 2px solid orange;
}

form {
  border: 2px solid blue;
  width: 80%;
}

#input-container {
  display: flex;
  gap: 25px;
}

.rec-info {
  display: flex;
  flex-direction: column;
  width: 25%;
}

::placeholder {
  color: lightgray;
}

